--- a/testimony.html
+++ b/testimony.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>FusBlog - Your Fusca Blog/title>
+		<title>FusBlog - Your Fusca Blog</title>
 		<link rel="icon" href="imagens/favicon.jpg" />
 		<meta charset="utf-8" />
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
